@@ -5,6 +5,7 @@
 * Development
 
 - Fix star prettification if =org-indent-mode= is enabled.
+- Prettify =filetags=.
 
 * Version 0.9 (2023-03-12)
 
